# fastapi-challange-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: app.py
app/auth/: dependencies.py  models.py  routes.py  schemas.py  services.py
app/core/: db.py  exception_handlers.py  exceptions.py  middleware.py  mixins.py  schemas.py  settings.py
app/posts/: models.py  routes.py  schemas.py  services.py
app/tags/: models.py  routes.py  schemas.py  services.py
migrations/: env.py
migrations/versions/: 74331a13626b_initial_migration.py  9e6dd15ac637_.py  a487a0269c6d_.py  a95900544669_.py  afac8ee83228_add_tags_and_post_tags_table.py  ba5720441a5c_clean_db_and_add_user_id_to_tags.py  de9dc0d0bc49_add_user_model_and_update_post_model_.py
